# advent-of-code-2025

./: .gitignore  .gitmodules  CMakeLists.txt  QUICK_START.md  README.md  main.cpp  solver_all.cpp
1/: CMakeLists.txt  solve.cpp
10/: CMakeLists.txt  solve.cpp
11/: CMakeLists.txt  solve.cpp
12/: CMakeLists.txt  solve.cpp
2/: CMakeLists.txt  solve.cpp
3/: CMakeLists.txt  solve.cpp
4/: CMakeLists.txt  solve.cpp
5/: CMakeLists.txt  solve.cpp
6/: CMakeLists.txt  solve.cpp
7/: CMakeLists.txt  solve.cpp
8/: CMakeLists.txt  solve.cpp
9/: CMakeLists.txt  solve.cpp
base/: solve.cpp
